--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <body>
         <div class="d1">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKwnLr5Z4Jbaff6-Q-nieA4NCJH1IoXrOF5YZpV91L-A&s" height="80px">
-            <h2>Lindsay</h2>
+            <h2>Single channel</h2>
         </div>
         <div class="d-flex">
             <div class="d2">
