--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body>
         <div class="d1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKwnLr5Z4Jbaff6-Q-nieA4NCJH1IoXrOF5YZpV91L-A&s" height="80px">
+            <img src="https://i.ibb.co/F7Msf7j/images-removebg-preview.png" height="75px">
             <h2>Single channel</h2>
         </div>
         <div class="d-flex">
