--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </ul>
             </div>
             <div class="d3">
-                <iframe src="https://console.dev-shoprz.live/"></iframe>
+                <iframe src="https://console.dev-shoprz.live/" allow="camera *;microphone *"></iframe>
             </div>
         </div>
         
