--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
                 </ul>
             </div>
             <div class="d3">
-                <iframe src="https://console.dev-shoprz.live/" allow="camera *;microphone *"></iframe>
+                <iframe src="https://console.dev-shoprz.live/"
+                    id="vimmi-studio"
+                    allow="display-capture *;camera *;microphone *;fullscreen;clipboard-read; clipboard-write"
+                    allowfullscreen=""
+                    frameborder="0"
+                    sandbox="allow-scripts allow-forms allow-same-origin allow-popups allow-popups-to-escape-sandbox">
+                </iframe>
             </div>
         </div>
         
