--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>Single channel - Studio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             iframe {
                 width: 100%;
@@ -41,6 +43,10 @@
                 flex-direction: row;
                 height: 90%;
             }
+            a {
+            text-decoration: none;
+            color: black;
+            }
         </style>
     </head>
     <body>
@@ -60,7 +66,7 @@
                     <li>Analytics</li>
                     <li>Apps</li>
                     <li>Settings</li>
-                    <li><b><u>Vimmi Studio</u></b></li>
+                    <li><b><u><a href="https://goodflo-99.github.io/single-channel/">Vimmi Studio</a></u></b></li>
                 </ul>
             </div>
             <div class="d3">
