--- a/token.html
+++ b/token.html
@@ -69,7 +69,7 @@
         }
 
         textarea {
-            font-size: 12px;
+            font-size: 12px !important;
             min-height: 25rem;
         }
 
