--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Single channel - Studio</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             iframe {
