--- a/vp-dev.html
+++ b/vp-dev.html
@@ -67,7 +67,7 @@
                     <li>Analytics</li>
                     <li>Apps</li>
                     <li>Settings</li>
-                    <li><b><u><a href="https://goodflo-99.github.io/single-channel/vp">Vimmi Studio</a></u></b></li>
+                    <li><b><u><a href="https://goodflo-99.github.io/single-channel/vp-dev">Vimmi Studio</a></u></b></li>
                 </ul>
             </div>
             <div class="d3">
